--- a/bin/model.jinja2
+++ b/bin/model.jinja2
@@ -16,8 +16,11 @@ class {{ model.definition.name }}(Model):
     """
     {{ model.definition.description|replace('"', '\'')|wordwrap|indent }}
     """
-    apiVersion = Field(six.text_type, "{{ [model.gvk.group, model.gvk.version]|select|join("/") }}")
-    kind = Field(six.text_type, "{{ model.gvk.kind }}")
+{% if model.definition.gvks %}
+{% set gvk = model.definition.gvks[-1] %}
+    apiVersion = Field(six.text_type, "{{ [gvk.group, gvk.version]|select|join("/") }}")
+    kind = Field(six.text_type, "{{ gvk.kind }}")
+{% endif %}
 
 {% for field in model.definition.fields|rejectattr("name", "in", ("apiVersion", "kind"))|sort %}
     {{ field.name }} = Field({{ field.type }})
